# PicoBoot-DX

./: .gitignore  CMakeLists.txt  README.md  flash.ld  process_ipl.py
.github/workflows/: build.yml  prereleased.yml  released.yml
CubeSB_DOL-001/: CubeSB.kicad_pcb  CubeSB.kicad_prl  CubeSB.kicad_pro  CubeSB.kicad_sch  README.md
assets/images/: Wiring diagram 2.psd
assets/ipl/: gekkoboot_r9_4.dol  gekkoboot_uf2.dol  iplboot.dol
src/: endian.h  led.c  led.h  lwipopts.h  ota.c  ota.h  picoboot-dx.c  picoboot-dx.pio  picoboot.pio  pio.c  pio.h
tools/: process_ipl.py  uf2dol.py
